@@ -199,13 +199,13 @@ public class SearchDataQuery implements ISearchQuery {
                         }
                         operator = DBCLogicalOperator.EQUALS;
                         try {
-                            value = new Integer(params.searchString);
+                            value = Integer.valueOf(params.searchString);
                         } catch (NumberFormatException e) {
                             try {
-                                value = new Long(params.searchString);
+                                value = Long.valueOf(params.searchString);
                             } catch (NumberFormatException e1) {
                                 try {
-                                    value = new Double(params.searchString);
+                                    value = Double.valueOf(params.searchString);
                                 } catch (NumberFormatException e2) {
                                     try {
                                         value = new BigDecimal(params.searchString);
@@ -227,7 +227,11 @@ public class SearchDataQuery implements ISearchQuery {
 //                        if (attribute.getMaxLength() > 0 && attribute.getMaxLength() < params.searchString.length()) {
 //                            continue;
 //                        }
-                        if (ArrayUtils.contains(supportedOperators, DBCLogicalOperator.LIKE)) {
+
+                        if (!params.isCaseSensitive() && ArrayUtils.contains(supportedOperators, DBCLogicalOperator.ILIKE)) {
+                            operator = DBCLogicalOperator.ILIKE;
+                            value = "%" + params.searchString + "%";
+                        } else if (ArrayUtils.contains(supportedOperators, DBCLogicalOperator.LIKE)) {
                             operator = DBCLogicalOperator.LIKE;
                             value = "%" + params.searchString + "%";
                         } else if (ArrayUtils.contains(supportedOperators, DBCLogicalOperator.EQUALS)) {
@@ -303,7 +307,7 @@ public class SearchDataQuery implements ISearchQuery {
         private int rowCount = 0;
         private DBDDataFilter filter;
 
-        public TestDataReceiver(SearchTableMonitor searchMonitor) {
+        TestDataReceiver(SearchTableMonitor searchMonitor) {
             this.searchMonitor = searchMonitor;
         }
 
